--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,56 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+*, 
+*::before, 
+*::after {
+    font-family: 'Times New Roman', Times, serif;
     box-sizing: border-box;
+}
+
+.page-header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px 35px;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
+
+.container {
+    width: 800px;
+    max-width: 80%;
+    padding: 10px;
+    border-radius: 5px;
+    width: 800px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20%;
+}
+
+#question {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.button-column {
+    display: grid;
+    margin: 20px;
+    gap: 10px;
+}
+
+.button {
+    background-color: purple;
+    color: white;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 5px;
+    width: 20%;
+}
+
+.button:hover {
+    background-color: lightblue;
 }
